# scientific_computing

./: .gitignore  Project.toml  README.md
projects/TravelingSales/src/: TravelingSales.jl
projects/prng/CUDA/: CMakeLists.txt  main.cu
projects/prng/CUDA/Profiling/: TestProject_Profiling.ncu-proj  profile - 50000 tests.ncu-rep
projects/prng/julia/: benchmarks.jl  generate.jl  gradient.jl  optimize.jl  prng.jl  stats.jl
projects/prng/report/: references.bib  report.tex
projects/thesis/two_dimensional/julia/: ConformalTime.jl
projects/tsp/: .gitignore  README  references.bib  report.tex
projects/tsp/CUDA/: CudaPseudocode.cu  tspTranslate.cpp
projects/tsp/Julia/: analysis.jl  analysis_data.csv  analysis_data_100.csv  analysis_data_101_200.csv
projects/tsp/Julia/TravelingSales/: Project.toml
projects/tsp/Julia/TravelingSales/docs/src/: gravity.md  index.md
projects/tsp/Julia/TravelingSales/src/: TravelingSales.jl  parsetsp.jl  searchspace.jl
projects/tsp/Report/: references.bib  report.tex
projects/tsp/TravelingSales/: Project.toml  README
projects/tsp/TravelingSales/docs/: make.jl
projects/tsp/TravelingSales/docs/src/: index.md
projects/tsp/TravelingSales/src/: TravelingSales.jl  gravity.jl  initialize.jl  localsearch.jl  main.jl  neighborhood.jl  parsetsp.jl  physics.jl  searchspace.jl
seminars/sem_1/: sem_1.bib  sem_1.tex
seminars/tsp/: bib.bib  tsp_seminar.tex
